k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: hello-world
    weight: 100
  wildcardPolicy: None
